--- a/example.ipynb
+++ b/example.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train a simple dense neural net, and obtain its prediction (mean and std) using MC dropout.  "
+    "Train a simple linear regression, and obtain its prediction (mean and std).  "
    ]
   },
   {
