--- a/example.ipynb
+++ b/example.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a calibration set by collecting model prediction (mean and std) using MC dropout.  "
+    "Create a calibration set by collecting model prediction (mean and std).  "
    ]
   },
   {
@@ -2817,7 +2817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot PDF / calibration map / CDF for first 3 test instances"
+    "Plot PDF / calibration map / CDF for 3 random test instances"
    ]
   },
   {
